// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render <Checkbox> component 1`] = `
<Checkbox
  checked={false}
  disabled={false}
  theme="light"
>
  <styled.label
    disabled={false}
    theme="light"
  >
    <label
      className="sc-bdVaJa kzWkTC"
      disabled={false}
    >
      <styled.img
        alt="btn_checkbox"
        checked={false}
        disabled={false}
        src="btn_checkbox.svg"
        theme="light"
      >
        <img
          alt="btn_checkbox"
          checked={false}
          className="sc-bwzfXH hFFjjY"
          disabled={false}
          src="btn_checkbox.svg"
        />
      </styled.img>
      <styled.span>
        <span
          className="sc-htpNat cOIBOz"
        >
          normal
        </span>
      </styled.span>
    </label>
  </styled.label>
  <styled.input
    checked={false}
    disabled={false}
    onChange={[Function]}
    onClick={[Function]}
  >
    <input
      checked={false}
      className="sc-bxivhb cRvGhf"
      disabled={false}
      onChange={[Function]}
      onClick={[Function]}
      type="checkbox"
    />
  </styled.input>
</Checkbox>
`;

exports[`render <Checkbox> component 2`] = `
<Checkbox
  checked={false}
  disabled={true}
  theme="light"
>
  <styled.label
    disabled={true}
    theme="light"
  >
    <label
      className="sc-bdVaJa kKpDgL"
      disabled={true}
    >
      <styled.img
        alt="btn_checkbox_disable"
        checked={false}
        disabled={true}
        src="btn_checkbox_disable.svg"
        theme="light"
      >
        <img
          alt="btn_checkbox_disable"
          checked={false}
          className="sc-bwzfXH hFFjjY"
          disabled={true}
          src="btn_checkbox_disable.svg"
        />
      </styled.img>
      <styled.span>
        <span
          className="sc-htpNat cOIBOz"
        >
          disabled
        </span>
      </styled.span>
    </label>
  </styled.label>
  <styled.input
    checked={false}
    disabled={true}
    onChange={[Function]}
    onClick={[Function]}
  >
    <input
      checked={false}
      className="sc-bxivhb cRvGhf"
      disabled={true}
      onChange={[Function]}
      onClick={[Function]}
      type="checkbox"
    />
  </styled.input>
</Checkbox>
`;

exports[`render <Checkbox> component 3`] = `
<Checkbox
  checked={true}
  disabled={false}
  theme="light"
>
  <styled.label
    disabled={false}
    theme="light"
  >
    <label
      className="sc-bdVaJa kzWkTC"
      disabled={false}
    >
      <styled.img
        alt="btn_checkbox_pressed"
        checked={true}
        disabled={false}
        src="btn_checkbox_pressed.svg"
        theme="light"
      >
        <img
          alt="btn_checkbox_pressed"
          checked={true}
          className="sc-bwzfXH hFFjjY"
          disabled={false}
          src="btn_checkbox_pressed.svg"
        />
      </styled.img>
      <styled.span>
        <span
          className="sc-htpNat cOIBOz"
        >
          checked
        </span>
      </styled.span>
    </label>
  </styled.label>
  <styled.input
    checked={true}
    disabled={false}
    onChange={[Function]}
    onClick={[Function]}
  >
    <input
      checked={true}
      className="sc-bxivhb cRvGhf"
      disabled={false}
      onChange={[Function]}
      onClick={[Function]}
      type="checkbox"
    />
  </styled.input>
</Checkbox>
`;

exports[`render <Checkbox> component 4`] = `
<Checkbox
  checked={true}
  disabled={true}
  theme="light"
>
  <styled.label
    disabled={true}
    theme="light"
  >
    <label
      className="sc-bdVaJa kKpDgL"
      disabled={true}
    >
      <styled.img
        alt="btn_checkbox_presseddisable"
        checked={true}
        disabled={true}
        src="btn_checkbox_presseddisable.svg"
        theme="light"
      >
        <img
          alt="btn_checkbox_presseddisable"
          checked={true}
          className="sc-bwzfXH hFFjjY"
          disabled={true}
          src="btn_checkbox_presseddisable.svg"
        />
      </styled.img>
      <styled.span>
        <span
          className="sc-htpNat cOIBOz"
        >
          checked disabled
        </span>
      </styled.span>
    </label>
  </styled.label>
  <styled.input
    checked={true}
    disabled={true}
    onChange={[Function]}
    onClick={[Function]}
  >
    <input
      checked={true}
      className="sc-bxivhb cRvGhf"
      disabled={true}
      onChange={[Function]}
      onClick={[Function]}
      type="checkbox"
    />
  </styled.input>
</Checkbox>
`;
